Media queries and page scalability fixes

--- a/styles.css
+++ b/styles.css
@@ -119,13 +119,12 @@ code {
 }
 
 
-@media only screen and (max-width: 950px) {
-  
+@media only screen and (max-width: 1220px) {
   .menu__toggle {
     display: block;
     position: fixed;
     top: 20px;
-    left: 30px;
+    left: 35px;
     z-index: 6;
     width: 100%;
   }
@@ -208,7 +207,7 @@ code {
   section article {
     color: #4d4e53;
     margin: 15px;
-    font-size: 0.85em;
+    font-size: 0.9em;
   }
   
   section li {
@@ -221,7 +220,7 @@ code {
 
   #main-doc header {
     text-align: left;
-    font-size: 1.2em;
+    font-size: 1.6em;
   } 
 
   #navbar a {
@@ -236,8 +235,22 @@ code {
 }
 
 @media (min-width: 250px) and (max-width: 450px) {
+  .menu__toggle {
+    display: block;
+    position: fixed;
+    top: 20px;
+    left: 23px;
+    z-index: 6;
+    width: 100%;
+  }
+
+  #navbar ul {
+    height: 94%;
+  }
+
   #main-doc {
-    margin-right: 12px;
+    margin-right: 7px;
+    margin-left: 7px;
   }
 
   section article {
@@ -256,7 +269,7 @@ code {
 
   #main-doc header {
     text-align: left;
-    font-size: 1.2em;
+    font-size: 1.4em;
   } 
 }
 
